--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -15,3 +15,9 @@
     margin-bottom: 1rem;
     font-size: 3rem;
 }
+
+#contactdes {
+    padding: 1rem;
+    font-size: 1.3rem;
+    font-weight: 300;
+}
