--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -21,3 +21,10 @@
     font-size: 1.3rem;
     font-weight: 300;
 }
+
+.contactForm {
+    margin: 1rem auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
