--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: yellowgreen;
+    margin-bottom: 1rem;
 }
 
 #contact-header {
@@ -30,5 +30,4 @@
     justify-content: center;
     width: 100%;
     max-width: 50rem;
-    background-color: aliceblue;
 }
