--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -51,3 +51,10 @@
     border-radius: 0.5rem;
     padding: 0.75rem 3.5rem;
 }
+
+#contact-page .contactForm .links {
+    display: flex;
+    gap: 1.6rem;
+    margin-top: 0.1rem;
+    background: greenyellow;
+}
