--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -40,6 +40,8 @@
     padding: 0.5rem 1rem;
     color: white;
     border: none;
+    outline: none;
+    box-shadow: none;
     border-radius: 0.5rem;
     background: rgb(40, 40, 40);
 }
