--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -77,6 +77,10 @@
 
 @media screen and (max-width: 600px){
 
+    .name:focus, .email:focus, .msg:focus {
+        border: 1px solid gray;
+    }
+
     #contact-page .contactForm .links a {
         display: flex;
     }
