--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -92,6 +92,7 @@
 
     .navbar {
         border-bottom: 1px solid rgb(150, 150, 150);
+        position: fixed;
     }
     .mobMenu {
         display: flex;
