--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -8,7 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: fixed;
+    position: sticky;
     top: 0;
     z-index: 3;
 }
